@@ -39,7 +39,7 @@ final class TetrapolarDerivativeMeasurement implements DerivativeMeasurement {
 
   @Override
   public String toString() {
-    return String.format("%s, %s", measurement, Strings.dRhoByH(dRhoBydH));
+    return "%s, %s".formatted(String.valueOf(measurement), Strings.dRhoByH(dRhoBydH));
   }
 
   @Nonnull
