@@ -34,10 +34,10 @@ public class StringsTest {
 
   @Test
   public void testRhoH() {
-    Assert.assertEquals(Strings.rho(2.1234), String.format("\u03c1 = %.3f %s", 2.123, OHM_METRE));
-    Assert.assertEquals(Strings.rho1(2.1234), String.format("\u03c1\u2081 = %.3f %s", 2.123, OHM_METRE));
-    Assert.assertEquals(Strings.rho2(20.1236), String.format("\u03c1\u2082 = %.3f %s", 20.124, OHM_METRE));
-    Assert.assertEquals(Strings.h(0.21236, 2), String.format("h\u2082 = %.2f %s", 212.36, MetricPrefix.MILLI(Units.METRE)));
-    Assert.assertEquals(Strings.dRhoByH(1.21), String.format("d\u03c1/dh = %.0f %s", 1.0, OHM));
+    Assert.assertEquals(Strings.rho(2.1234), "\u03c1 = %.3f %s".formatted(2.123, OHM_METRE));
+    Assert.assertEquals(Strings.rho1(2.1234), "\u03c1\u2081 = %.3f %s".formatted(2.123, OHM_METRE));
+    Assert.assertEquals(Strings.rho2(20.1236), "\u03c1\u2082 = %.3f %s".formatted(20.124, OHM_METRE));
+    Assert.assertEquals(Strings.h(0.21236, 2), "h\u2082 = %.2f %s".formatted(212.36, MetricPrefix.MILLI(Units.METRE)));
+    Assert.assertEquals(Strings.dRhoByH(1.21), "d\u03c1/dh = %.0f %s".formatted(1.0, OHM));
   }
 }
